# pipeclear

./: .containerignore  .gitignore  .gitleaks.toml  .gitleaksignore  Containerfile  HACKATHON_DEMO_GUIDE.md  LICENSE  LIVE_RHOAI_TEST_RESULTS.md  README.md  RHOAI_DEPLOYMENT_GUIDE.md  RHOAI_TESTING_SUMMARY.md  demo_end_to_end.sh  go.mod  go.sum  pyproject.toml  simple_success_pipeline.yaml  test_rhoai_deployment.py
diagrams/: architecture.mmd  validation-flow.mmd
docs/plans/: 2026-02-25-pipeclear-implementation.md  2026-02-25-pipeclear-mvp-design.md  2026-03-19-pipeclear-implementation-plan.md  2026-03-19-pipeclear-rhoai-integration-design.md
examples/demo_notebooks/: 1_simple_success.ipynb  2_resource_problem.ipynb  3_kitchen_sink.ipynb
examples/generated_pipelines/: simple_success_pipeline.py
pipeclear/: __init__.py  cli.py  config.py  generator.py  reporter.py
pipeclear/kfp/: __init__.py  compiler.py  component.py  decorator.py
pipeclear/validators/: dependency.py  resource.py  security.py
pkg/pipeclear/: config.go  config_test.go  rules.go  rules_test.go  validate.go  validate_test.go
proposals/pipeclear-server-side-validation/: README.md
scripts/: deploy_to_rhoai.py
src/: analyzer.py  cli.py  generator.py  reporter.py
src/validators/: image.py  security.py
tests/: test_analyzer.py  test_cli_config.py  test_compiler_from_config.py  test_compiler_real_notebooks.py  test_config.py  test_generator.py  test_image_validator.py  test_integration.py  test_kfp_compiler_plugin.py  test_kfp_component.py  test_kfp_decorator.py  test_reporter.py  test_sdk.py  test_validators.py
tests/fixtures/: llm_notebook.ipynb  secrets_notebook.ipynb  simple_notebook.ipynb
