[project]
name = "pipeclear"
dynamic = ["version"]
description = "Pre-flight validation and pipeline generation for Jupyter notebooks on RHOAI"
license = {text = "Apache-2.0"}
authors = [{name = "Ugo Giordano"}]
requires-python = ">=3.11"
dependencies = [
    "nbformat>=5.9.0",
    "kfp>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
pipeclear = "pipeclear.cli:app"

[tool.setuptools.dynamic]
version = {attr = "pipeclear.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
